@@ -20,10 +20,12 @@ namespace SimpleComplex\Config;
  * - not: {}()/\@:
  * - length: >=2 <=64
  *
- * Implementations must expose instance property 'name'.
+ * Implementations must expose instance property 'name'. The property is allowed
+ * to be virtual; see SectionedWrapper::__get().
  *
  * @see \Psr\SimpleCache\CacheInterface
- * @see PropertyNameTrait
+ * @see SectionedConfigInterface
+ * @see SectionedWrapper::__get()
  *
  * @property-read string $name
  *
@@ -31,8 +33,6 @@ namespace SimpleComplex\Config;
  */
 interface ConfigInterface
 {
-    //use PropertyNameTrait;
-
     /**
      * Fetches a value from the configuration store.
      *
@@ -110,4 +110,23 @@ interface ConfigInterface
      *   MUST be thrown if arg key string is not a legal value.
      */
     public function has(string $key) : bool;
+
+
+    // Expose read-only instance property 'name'.
+
+    /**
+     * @param mixed $name
+     *
+     * @return string
+     */
+    public function __get($name);
+
+    /**
+     * @param mixed $name
+     * @param mixed $value
+     *
+     * @throws \RuntimeException
+     *      When arg name is 'name'.
+     */
+    public function __set($name, $value);
 }
