@@ -29,9 +29,11 @@ namespace SimpleComplex\Config;
  * - not: {}()/\@:
  * - length: >=2 <=64
  *
- * Implementations must expose instance property 'name'.
+ * Implementations must expose instance property 'name'. The property is allowed
+ * to be virtual; see SectionedWrapper::__get().
  *
- * @see PropertyNameTrait
+ * @see ConfigInterface
+ * @see SectionedWrapper::__get()
  *
  * @property-read string $name
  *
@@ -39,8 +41,6 @@ namespace SimpleComplex\Config;
  */
 interface SectionedConfigInterface
 {
-    //use PropertyNameTrait;
-
     /**
      * Fetches a value from the configuration store.
      *
@@ -163,4 +163,23 @@ interface SectionedConfigInterface
      * @return void
      */
     public function forget(string $section) /*: void*/;
+
+
+    // Expose read-only instance property 'name'.
+
+    /**
+     * @param mixed $name
+     *
+     * @return string
+     */
+    public function __get($name);
+
+    /**
+     * @param mixed $name
+     * @param mixed $value
+     *
+     * @throws \RuntimeException
+     *      When arg name is 'name'.
+     */
+    public function __set($name, $value);
 }
